# craftml-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  metrics.rs  util.rs
src/data/: mod.rs  sparse_vector.rs
src/model/: eval.rs  mod.rs  skmeans.rs  train.rs
